detail内の予約するボタン蘇生儀式

--- a/flask_app/templates/customer/customer_event/detail.html
+++ b/flask_app/templates/customer/customer_event/detail.html
@@ -10,7 +10,7 @@
             <p>概要<br>{{event.event_overview}}</p>
         
             <a href="{{url_for('show_customer_event_list')}}" class="btn btn-secondary">一覧に戻る</a>
-            <a href="" class="btn btn-success">予約する</a>
+            <a href="{{url_for('show_customer_reservation',event_id=event.event_id)}}" class="btn btn-success">予約する</a>
         </div>
     </div>
 
