--- a/flask_app/templates/customer/customer_signup/input.html
+++ b/flask_app/templates/customer/customer_signup/input.html
@@ -10,7 +10,7 @@
     <form method="post" action="{{url_for('show_signup_confirm')}}">
       <div class="form-group">
         <label>アカウント名：</label>
-        <input class="form-control" name="customer_account" type="text">
+        <input class="form-control" name="customer_account" type="email">
 
         <label>パスワード<span class="required">（必須）</span>：</label>
         <input class="form-control" name="customer_password" type="password">
