--- a/flask_app/templates/customer/customer_ticket/ticket_reservation.html
+++ b/flask_app/templates/customer/customer_ticket/ticket_reservation.html
@@ -23,7 +23,7 @@
 
     <div id="button_area">
         <a href="{{url_for('show_customer_event_list')}}" class="btn btn-secondary">一覧に戻る</a>
-        <a href="{{url_for('show_customer_event_list')}}" class="btn btn-success">確認する</a>
+        <a href="{{ url_for('show_customer_ticket_confirm', event_id=event.event_id, event_category_id=event_category.event_category_id) }}" class="btn btn-success">確認する</a>
     </div>
 </div>
 {% endblock %}
