--- a/flask_app/templates/customer/mypage/mypage_top.html
+++ b/flask_app/templates/customer/mypage/mypage_top.html
@@ -50,7 +50,7 @@
                               <td class="event_name">{{current_reserved_event_name.event_name}}</td>
                                 <td class="action_button">
                                   <div>
-                                    <a href="{{ url_for('show_customer_event_detail', event_id=event.event_id) }}" class="btn btn-danger" style="margin: 0 auto;">キャンセルする</a>
+                                    <a href="#" class="btn btn-danger" style="margin: 0 auto;">キャンセルする</a>
                                   </div>
                                 </td>
                               </form>
