--- a/flask_app/templates/customer/mypage/customer_edit_form.html
+++ b/flask_app/templates/customer/mypage/customer_edit_form.html
@@ -18,7 +18,7 @@
         
         <!-- パスワード -->
         <div class="form-group">
-            <label for="custoer_password" class="form-label">パスワード</label>
+            <label for="custoer_password" class="form-label">パスワード(半角英数字8文字以上20文字以下)</label>
             <input type="password" class="form-control" id="customer_password" name="customer_password">
         </div>
 
