--- a/flask_app/templates/customer/mypage/customer_ticket_delete_confirm.html
+++ b/flask_app/templates/customer/mypage/customer_ticket_delete_confirm.html
@@ -5,10 +5,10 @@
         <nav>
             <p class="menu">
                 <a href="{{ url_for('show_mypage') }}">マイページ</a>
-                ><a> 削除確認</a>
+                ><a> キャンセル確認</a>
             </p>
         </nav>
-        <h3>以下の内容を削除しますがよろしいですか？</h3>
+        <h3>以下の内容をキャンセルしますがよろしいですか？</h3>
         <div class="base_pattern">
             <h1 id="main_title">{{event.event_name}}</h1>
             <p>開催日：{{event.event_date}}</p>
