--- a/flask_app/templates/customer/customer_event/detail.html
+++ b/flask_app/templates/customer/customer_event/detail.html
@@ -13,7 +13,7 @@
             <p>イベントカテゴリ：{{event_category.event_category_name}}</p>
             <p>開催日：{{event.event_date}}</p>
             <p>開催場所：{{event.event_place}}</p>
-            <p>概要：<br>{{event.event_overview}}</p>
+            <p>概要：{{event.event_overview}}</p>
         
             <a href="{{url_for('show_customer_event_list')}}" class="btn btn-secondary">一覧に戻る</a>
             <a href="{{url_for('show_customer_reservation',event_id=event.event_id)}}" class="btn btn-success">予約する</a>
