ログイン画面で、一覧に戻るボタンを追加

--- a/flask_app/templates/customer/customer_login/customer_login.html
+++ b/flask_app/templates/customer/customer_login/customer_login.html
@@ -13,6 +13,7 @@
                 <input class="form-control" id="customer_password" name="customer_password" type="password"> 
             </div>
         
+            <a class="btn btn-secondary" href="{{url_for('show_customer_event_list')}}">一覧に戻る</a>
             <button class="btn btn-primary" type="submit">ログイン</button> 
             <a href="{{url_for('show_signup')}}" style="margin-left: 10px;">新規登録はこちら</a>
         </form>
